# sw-cpp-test

./: .gitignore  CMakeLists.txt  GUIDE.md  KNOWN_ISSUES.md  README.md
src/: main.cpp
src/Core/: GameContext.hpp  IAction.hpp  Map.cpp  Map.hpp  MarchState.hpp  TurnManager.cpp  TurnManager.hpp  Unit.hpp  UnitStorage.cpp  UnitStorage.hpp
src/Features/Actions/: MeleeAttackAction.cpp  MeleeAttackAction.hpp  MoveAction.cpp  MoveAction.hpp  RangedAttackAction.cpp  RangedAttackAction.hpp
src/Features/Units/: HunterUnit.hpp  SwordsmanUnit.hpp
src/IO/System/: EventLog.hpp  TypeRegistry.hpp
tests/: TestHelpers.hpp  TestRunner.hpp  main_test.cpp  test_Integration.cpp  test_Map.cpp  test_MeleeAttack.cpp  test_MoveAction.cpp  test_RangedAttack.cpp  test_TurnManager.cpp  test_UnitStorage.cpp
